# ABV_Tasting_Event

./: README.md  environment.yml  main.py  notified_events.json  onlyText.py  pyproject.toml  requirements.txt
.github/workflows/: line-message-api.yml
